# my-devcontainers

cpp/.devcontainer/: devcontainer.json  postCreateCommand.sh
cpp/cmake-demo/: .gitignore  CMakeLists.txt
cpp/cmake-demo/c-demo/: CMakeLists.txt  main.c
cpp/cmake-demo/cpp-demo/: CMakeLists.txt  main.cpp
cpp/xmake-demo/: .gitignore  xmake.lua
cpp/xmake-demo/c-demo/: xmake.lua
cpp/xmake-demo/c-demo/src/: main.c
cpp/xmake-demo/cpp-demo/: xmake.lua
cpp/xmake-demo/cpp-demo/src/: main.cpp
rt-thread/: .config  .gitignore  Kconfig  SConstruct  rtconfig.py  vscode.code-workspace
rt-thread/.devcontainer/: Dockerfile  Readme.md  devcontainer.json  postCreateCommand.sh
rt-thread/applications/: main.c
rt-thread/board/: Kconfig
win-msys2/.devcontainer/: dev.md  devcontainer.json  docker-compose.yml
wine-msys2/.devcontainer/: Readme.md  devcontainer.json  msys2  postCreateCommand.sh
xmake-qtquick/: .gitignore  xmake.lua
xmake-qtquick/.devcontainer/: devcontainer.json  install-deps.sh
xmake-qtquick/src/: main.qml
